# wenet-hotword

./: .gitignore  HOTWORD_MODULE_FILES.md  INTEGRATION_NOTES.md  README.md
runtime/core/api/: wenet_api.cc
runtime/core/cmake/: cpp_pinyin.cmake  gflags.cmake  glog.cmake  openfst.cmake  wetextprocessing.cmake
runtime/core/decoder/: CMakeLists.txt  asr_decoder.cc  asr_decoder.h  context_graph.cc  context_graph.h  corrector.cc  corrector.h  ctc_endpoint.cc  ctc_endpoint.h  ctc_prefix_beam_search.cc  ctc_wfst_beam_search.cc  hotword_cache.cc  hotword_cache.h  params.h  plate_corrector.cc  plate_corrector.h  torch_asr_model.cc
runtime/libtorch/: CMakeLists.txt
runtime/libtorch/configs/: default.eval.txt  default.pareto.jsonl  default.study.db  default.tuned.yaml  default.yaml  hotwords_all.txt  hotwords_hard.txt  mode_aggressive.yaml  mode_balanced.yaml  mode_conservative.yaml  mode_ultra.yaml  search_space.yaml
runtime/libtorch/eval_runs/: A_baseline.metrics.txt  A_baseline.txt  B_phoneme.metrics.txt  B_phoneme.txt  C_pinyin_ctx.txt  D2_no_rescore.metrics.txt  D2_no_rescore.txt  D3_high_rescore.metrics.txt  D3_high_rescore.txt  D_confidence.txt  D_confidence_stream.txt  E_cache.txt  E_cache_stream.metrics.txt  E_cache_stream.txt  FG_stacked.metrics.txt  FG_stacked.txt  F_autotune.metrics.txt  F_autotune.txt  G_wenet_native.metrics.txt  G_wenet_native.txt  HOTWORD_EVAL.md  run_ablations.sh  summary.tsv
runtime/libtorch/eval_runs/aishell1_indep/: A_baseline.metrics.txt  A_baseline.txt  B_phoneme.txt  C_pinyin_ctx.metrics.txt  C_pinyin_ctx.txt  D_confidence.txt  E_cache.metrics.txt  E_cache.txt  FG_stacked.metrics.txt  FG_stacked.txt  F_autotune.txt  G_wenet_native.metrics.txt  G_wenet_native.txt  summary.tsv
runtime/libtorch/eval_runs/aishell1_oov/: A_baseline.txt  B_phoneme.txt  C_pinyin_ctx.metrics.txt  C_pinyin_ctx.txt  D_confidence.txt  E_cache.txt  summary.tsv
runtime/libtorch/eval_runs/autotune/: trial_0000.txt  trial_0001.metrics.txt  (+187 more)
runtime/tools/: build_pinyin_tables.py
tools/: autotune.py  build_streaming_scp.py  bundle_sync.py  compute-correction-impact.py  compute-hotword-metrics.py  decoder_config.py  evaluate_modes.py  extract_aishell1_parquet.py  extract_distractors.py  extract_hotwords.py  learn_confusion.py  perturb_hotwords.py  prepare_aishell_hotwords.sh  prepare_benchmark.sh  prepare_hotwords.py  prepare_openslr.py  quick_eval.py  summarize_modes.py
wenet/dataset/: processor.py
(+18 files in other folders)
